--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -37,6 +37,7 @@ jobs:
         CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o "mkcert-$(git describe --tags)-linux-arm64" -ldflags "-X main.Version=$(git describe --tags)"
         CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o "mkcert-$(git describe --tags)-darwin-amd64" -ldflags "-X main.Version=$(git describe --tags)"
         CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o "mkcert-$(git describe --tags)-windows-amd64.exe" -ldflags "-X main.Version=$(git describe --tags)"
+        CGO_ENABLED=0 GOOS=windows GOARCH=arm go build -o "mkcert-$(git describe --tags)-windows-arm.exe" -ldflags "-X main.Version=$(git describe --tags)"
 
     - name: Publish artifacts
       uses: ncipollo/release-action@v1
