--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -40,3 +40,4 @@ jobs:
         CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o "mkcert-$(git describe --tags)-linux-arm64" -ldflags "-X main.Version=$(git describe --tags)"
         CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o "mkcert-$(git describe --tags)-darwin-amd64" -ldflags "-X main.Version=$(git describe --tags)"
         CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o "mkcert-$(git describe --tags)-windows-amd64.exe" -ldflags "-X main.Version=$(git describe --tags)"
+        CGO_ENABLED=0 GOOS=windows GOARCH=arm go build -o "mkcert-$(git describe --tags)-windows-arm.exe" -ldflags "-X main.Version=$(git describe --tags)"
