--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.x
+          go-version: ^1.16
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Build binaries
